--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -14,13 +14,17 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.catanstat.InputActivity"
+            android:name="com.example.catanstat.MenuActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.catanstat.InputActivity"
+            android:label="@string/title_activity_menu" >
         </activity>
     </application>
 
